将各玩家的存储空间独立，玩家与玩家之间的存储空间互不干扰